--- a/5.Operation_of_2GW.tex
+++ b/5.Operation_of_2GW.tex
@@ -13,7 +13,7 @@ Connecting a large scale \gls{OWF} network to an offshore-onshore \gls{HVDC} lin
 \end{figure}
 
 \section{General settings, Control modes and Pre-set conditions}
-The simulation time step for all the simulations are set to 50 $\mu$s. All plots are simulated for a span of 5 seconds. All the fault or switching events are timed to occur at 0.5 second of the simulation. The three-phase voltage and current graphs for all simulations are plotted for a shorter time span to have a clearer view of the signals during the occurrence of an event. However, the voltage in p.u., active and reactive power graphs are plotted for the whole time span (5 seconds) to analyze the voltage stability and power flow in the network during the simulation. In order to analyse the dynamic and steady state operation of the network, the controllers and set points need to be initialised before charging. They are set as following:
+The simulation time step for all the simulations are set to 50 $\mu$s. All plots are simulated for a span of 5 seconds. All the fault or switching events are timed to occur at 0.5 second of the simulation. The three-phase voltage and current graphs for all simulations are plotted for a shorter time span to have a clearer view of the signals during the occurrence of an event. However, the voltage in p.u., active and reactive power graphs are plotted for the whole time span (5 seconds) to analyze the voltage stability and power flow in the network during the simulation. In order to analyze the dynamic and steady state operation of the network, the controllers and set points need to be initialised before charging. They are set as following:
 
 \begin{itemize}
     \item \gls{MMC}-1:
@@ -193,7 +193,7 @@ Once the system gets stabilized, the generation is increased in steps by increas
 From Figure \ref{fig:VABC_MMC_1_2_CB_5a} to \ref{P_MMC_1_2_All_WTconnect}, it can be said that, by viewing the respective voltages, currents and powers, the synchronization of both \gls{MMC}s and the energization of the offshore \gls{AC} grid is done successfully. The offshore \gls{AC} grid converters and cables now operate at a voltage of 66 kV, the \gls{HVDC} voltage is set to 640 kV and the total active power transmitted is nearly 2 GW in the network. Frequency of the system is stabilized at 50 Hz and the power system is said to be operating in the steady state condition.  
 
 \section{Dynamic performance analysis}
-Fault events and perturbations can occur in the grid and the components in the system must be able to withstand these voltage surges and fault currents for a short duration of time. The performance of the network in terms of short-term (fault occurring for a time span of 6-10 cycles accounting for 120 ms-200 ms) voltage stability and power flow is analysed. The coordination among different controllers available in the network is studied during severe perturbations in the network as described below.  
+Fault events and perturbations can occur in the grid and the components in the system must be able to withstand these voltage surges and fault currents for a short duration of time. The performance of the network in terms of short-term (fault occurring for a time span of 6-10 cycles accounting for 120 ms-200 ms) voltage stability and power flow is analyzed. The coordination among different controllers available in the network is studied during severe perturbations in the network as described below.  
 
 \subsection{Disconnection of one OWF}\label{disconnection_one_OWF}
 The first event is a sudden disconnection of one \gls{OWF}. \gls{OWF}-2 is permanently disconnected from the circuit by opening the breaker, CB-2a connected towards the \gls{OWF}-2 cable end at 0.5 seconds. Once the breaker is open, the generation of 500 MW is lost and the power flow is reduced through \gls{MMC}-1 as shown in Figure \ref{P_MMC_1_2_WT2off}. This is due to the fact that \gls{MMC}-1 is the one in grid forming control (provides power balance in the network) and also the active power reference of \gls{MMC}-2 is unchanged. In the post-fault period, the active power flow through \gls{MMC}-2 is seen to be higher than the pre-fault period. The reason for this can be justified from the increase in voltage at the \gls{OWF} side shown in the following section. \gls{MMC}-2 is seen to be operating with the maximum rated capacity of 1 GW in this condition. The decrease in generation in \gls{MMC}-1 can also be viewed from the current flowing in \gls{MMC}-1 as witnessed in Figure \ref{fig:IABC_MMC_1_WT2off} whereas the current remains the same in \gls{MMC}-2 as seen from the current graphs in Figure \ref{fig:IABC_MMC_2_WT2off}.  
@@ -308,7 +308,7 @@ The increase in active power in \gls{MMC}-2 after the fault has been cleared (as
 \label{fig:IABC_MMC_1_2_3phaseSC}
 \end{figure}
 
-Analysing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to provide rated reactive current to flow to the fault location by controlling the voltage of the converter as explained in Section \ref{DVC_RSCAD}. From the voltage in p.u. plot in Figure \ref{VACP_WT1_3phaseSC} and the three-phase voltage plot in Figure \ref{VABC_WT1_3phaseSC}, it can be seen that the voltage at the \gls{PCC}-1 drops and remains low throughout the fault period. During the time of fault in cable-1 and after CB-1a is opened, the voltage angle and magnitude at \gls{PCC}-1 goes to zero. The \gls{PLL} is synchronized with the \gls{AC} voltage at the \gls{PCC}-1. The voltage magnitude at \gls{GSC} remains non-zero, and the voltage angle is zero  during the time of fault as the \gls{PLL} follows the angular reference at \gls{PCC}-1. Therefore, due to higher voltage magnitude at the \gls{GSC} than the magnitude at \gls{PCC}-1, reactive power will flow from the \gls{GSC} to \gls{PCC}-1 and since the voltage angle is zero at \gls{GSC} and \gls{PCC}-1, the active power transmitted is zero during the time of fault. This is performed in \gls{DVC} by controlling the d-axis reference voltage of the \gls{GSC} and thereby indirectly controlling the current coming out of the \gls{GSC} to \gls{PCC}-1. The current limitation algorithm implemented in the \gls{DVC} in Section \ref{currentlimitation_RSCAD}, limits the output current to the rating of the converter and hence rated reactive current flows from the \gls{GSC} as seen in Figure \ref{WT1_currents_3phasefault}.
+Analyzing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to provide rated reactive current to flow to the fault location by controlling the voltage of the converter as explained in Section \ref{DVC_RSCAD}. From the voltage in p.u. plot in Figure \ref{VACP_WT1_3phaseSC} and the three-phase voltage plot in Figure \ref{VABC_WT1_3phaseSC}, it can be seen that the voltage at the \gls{PCC}-1 drops and remains low throughout the fault period. During the time of fault in cable-1 and after CB-1a is opened, the voltage angle and magnitude at \gls{PCC}-1 goes to zero. The \gls{PLL} is synchronized with the \gls{AC} voltage at the \gls{PCC}-1. The voltage magnitude at \gls{GSC} remains non-zero, and the voltage angle is zero  during the time of fault as the \gls{PLL} follows the angular reference at \gls{PCC}-1. Therefore, due to higher voltage magnitude at the \gls{GSC} than the magnitude at \gls{PCC}-1, reactive power will flow from the \gls{GSC} to \gls{PCC}-1 and since the voltage angle is zero at \gls{GSC} and \gls{PCC}-1, the active power transmitted is zero during the time of fault. This is performed in \gls{DVC} by controlling the d-axis reference voltage of the \gls{GSC} and thereby indirectly controlling the current coming out of the \gls{GSC} to \gls{PCC}-1. The current limitation algorithm implemented in the \gls{DVC} in Section \ref{currentlimitation_RSCAD}, limits the output current to the rating of the converter and hence rated reactive current flows from the \gls{GSC} as seen in Figure \ref{WT1_currents_3phasefault}.
 
 
 
