--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -46,7 +46,7 @@ Few significant results of the model include the achievement of short-term volta
 \paragraph{} Due to the urging need to move for large scale offshore networks with the currently available technology, a modified hybrid layout is implemented for the development of a 2 GW offshore network. The layout contains the connection of four sets of \gls{OWF}s connected to a common bus to which two \gls{MMC}s working in parallel are connected. To tackle the technical challenges related to voltage and frequency control in offshore islanded networks, all the four \gls{OWF}s are modelled with the implemented \gls{DVC}. This is done by modularly connecting the single \gls{OWF} model with implemented \gls{DVC} developed in Chapter \ref{3}. To provide the voltage reference during steady-state operation, one of the \gls{MMC}s (\gls{MMC}-1) is operated in grid forming (V/F control) and to maintain the flow of power in the network, \gls{MMC}-2 is operated with grid following (active power control) behaviour. %During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s.
 The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. One of dynamic conditions tested is the disconnection of one set of \gls{OWF}. In such a situation, it is observed that the network remains stable and the power flowing through \gls{MMC}-1 reduces as it is working in grid forming control. Another dynamic event tested is the three-phase fault in one of the \gls{HVAC} cables. A circuit breaker logic is modelled to isolate the \gls{OWF} from the network when the fault occurs in the corresponding \gls{HVAC} cable. It is observed that the operation of the entire network remains stable and after the circuit breaker is opened, islanding the \gls{OWF}, the \gls{DVC} in the corresponding \gls{OWF} provides reactive current injection to the fault location.
 
-\paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in parallel operation?}}
+\paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in an offshore network for parallel operation?}}
 
 \paragraph{} The four \gls{OWF}s with implemented \gls{DVC} are connected to a common \gls{MMC} bus in the 2 GW offshore network. This makes the \gls{OWF}s to be working in parallel configuration. The voltage and current profiles at the \gls{PCC}s of all the \gls{OWF}s are similar in steady-state since all the four \gls{OWF}s are modelled to generate equal amount of power. During the dynamic conditions such as the disconnection of one set of \gls{OWF}, it is observed that the power generated from other \gls{OWF}s connected to the network compensate for the loss of the disconnected \gls{OWF} by providing a slightly higher voltage at the corresponding \gls{PCC}s. Depending on the active power reference specified in the \gls{MMC} with grid following control (\gls{MMC}-2 in this case), the connected \gls{DVC}s contribute equally to this power since all the \gls{OWF}s generate the same amount of power. Similar results are attained for another dynamic event of a three-phase fault in any \gls{HVAC} cable. This shows the well-ordered coordination between the \gls{OWF}s in terms of short-term voltage stability and power flow in the network during all conditions.  
 
