--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,6 +1,9 @@
 \chapter*{Abstract}
-To meet the Paris agreement, large scale offshore wind energy deployment in the North Sea is a crucial requirement.  
-This includes the possibility of developing offshore infrastructure for deploying offshore wind power generation with installed capacity ranging from 70 to 150 GW by 2040, and increasing upto 180 GW by 2045. Presently, the Voltage Source Converter based (VSC based) - High Voltage Direct Current (VSC-HVDC) transmission is considered the most suitable for transfer of offshore wind power from distant offshore wind farms (OWFs) to the onshore system. Amidst the available VSC topologies, Modular Multi-level Converter (MMC) topology is the most appropriate  solution for the transfer of offshore wind power to onshore systems due to their enhanced performance during offshore and onshore disturbances. However, the currently deployed state-of-the-art MMC-HVDC transmission has a maximum capacity of 1.2 GW. Hence, this demands for a generic model with parallel operation of MMC-HVDC transmission systems to transfer the bulk amount of power from large scale OWFs. 
+
+
+%To meet the Paris agreement, large scale offshore wind energy deployment in the North Sea is a crucial requirement.
+
+The Paris Agreement, which calls for countries to pursue effort to limit global warming would require deployment of large scale offshore wind energy in the North Sea. This includes the possibility of developing offshore infrastructure for deploying offshore wind power generation with installed capacity ranging from 70 to 150 GW by 2040, and increasing upto 180 GW by 2045. Presently, the Voltage Source Converter based (VSC based) - High Voltage Direct Current (VSC-HVDC) transmission is considered the most suitable for transfer of offshore wind power from distant offshore wind farms (OWFs) to the onshore system. Amidst the available VSC topologies, Modular Multi-level Converter (MMC) topology is the most appropriate  solution for the transfer of offshore wind power to onshore systems due to their enhanced performance during offshore and onshore disturbances. However, the currently deployed state-of-the-art MMC-HVDC transmission has a maximum capacity of 1.2 GW. Hence, this demands for a generic model with parallel operation of MMC-HVDC transmission systems to transfer the bulk amount of power from large scale OWFs. 
 
 Additionally, the implementation of large scale offshore networks leads to an increase in the penetration of power electronic (PE) converters in the electrical power system. The increase in PE converters causes technical challenges (e.g. due to unprecedented fast dynamic phenomena) related to voltage and frequency stability, and power flow coordination in the power system. In view of the OWFs, the currently available current injection based voltage control for PE converters are not suitable for voltage control in large scale PE dominated systems due to the absence of continuous voltage control and ineffectiveness during islanding. Moreover, in such power systems, it is not suitable for frequency control due to the absence of dynamic frequency control. Therefore, better control strategies are required in large scale offshore networks to enhance the dynamic characteristics of the power system. 
 
