--- a/Appendix-a.tex
+++ b/Appendix-a.tex
@@ -195,7 +195,7 @@ The \gls{GSC} control block has the abc to dq transformation and vice versa, of 
     \label{fig:GSC_Control_RSCAD_2}
 \end{figure}
 
-\section{PowerFactory model}
+\section{PowerFactory model}\label{pfd_model_appen}
 
 \begin{figure}[H]
 \centering
