--- a/Appendix-c.tex
+++ b/Appendix-c.tex
@@ -253,18 +253,18 @@ First, the steps \ref{energ_appendix} and \ref{full_gen_appendix} must be perfor
     \label{IABC_WT4_3phaseSC}
 \end{figure}
 
-\begin{figure}[H]
-%\centering
-%\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Appendix_C/IDQ_WT3_3phaseSC.eps}
-    \caption{Currents in d and q axes in PCC-3 upon three-phase line to ground fault in the middle of cable-1}
-    \label{IDQ_WT3_3phaseSC}
-\end{figure}
+% \begin{figure}[H]
+% %\centering
+% %\hspace*{-1.2cm}
+%     \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Appendix_C/IDQ_WT3_3phaseSC.eps}
+%     \caption{Currents in d and q axes in PCC-3 upon three-phase line to ground fault in the middle of cable-1}
+%     \label{IDQ_WT3_3phaseSC}
+% \end{figure}
 
-\begin{figure}[H]
-%\centering
-%\hspace*{-1.2cm}
-    \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Appendix_C/IDQ_WT4_3phaseSC.eps}
-    \caption{Currents in d and q axes in PCC-4 upon three-phase line to ground fault in the middle of cable-1}
-    \label{IDQ_WT4_3phaseSC}
-\end{figure}
+% \begin{figure}[H]
+% %\centering
+% %\hspace*{-1.2cm}
+%     \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Appendix_C/IDQ_WT4_3phaseSC.eps}
+%     \caption{Currents in d and q axes in PCC-4 upon three-phase line to ground fault in the middle of cable-1}
+%     \label{IDQ_WT4_3phaseSC}
+% \end{figure}
