--- a/Appendix-d.tex
+++ b/Appendix-d.tex
@@ -1,4 +1,4 @@
-\chapter{Parameters and Configurations in RSCAD}
+\chapter{Parameters and Configurations in RSCAD}\label{Appendix_D}
 
 \section{Reactive power control parameters in DVC}
 
@@ -27,8 +27,8 @@ $T_w$              & Washout filter time constant                              &
 \begin{tabular}{|c|c|c|c|}
 \hline
 \textbf{Parameter} & \textbf{Description}                                  & \textbf{Unit} & \textbf{Value} \\ \hline
-$k_s$              & DC voltage control proportional gain                  & p.u.          & 1              \\ \hline
-$T_s$              & DC voltage control integral time constant             & p.u.          & 0.1            \\ \hline
+$k_S$              & DC voltage control proportional gain                  & p.u.          & 1              \\ \hline
+$T_S$              & DC voltage control integral time constant             & p.u.          & 0.1            \\ \hline
 $k_{Rf}$           & Proportional gain for direct frequency control        & p.u.          & 1              \\ \hline
 $T_{Rf}$           & First order delay for direct frequency control        & s             & 0.2            \\ \hline
 $T_{U_v}$ & \begin{tabular}[c]{@{}c@{}}Washout time constant for the voltage dependent active power\\ reduction\end{tabular} & s    & 60    \\ \hline
@@ -41,8 +41,8 @@ $T_a$              & Voltage measurement delay                             & s  
                    & Deadband for direct frequency control                 & Hz            & 0.2            \\ \hline
                    & Deadband for voltage dependent active power reduction & p.u.          & 0.1            \\ \hline
 \end{tabular}
-\caption{Parameters of reactive power control loop in DVC}
-\label{tab:Reactive_pow_para}
+\caption{Parameters of active power control loop in DVC}
+\label{tab:Active_pow_para}
 \end{table}
 
 \section{V/F control parameters}
