--- a/references_3.bib
+++ b/references_3.bib
@@ -1,17 +1,32 @@
 
-@misc{noauthor_first_nodate,
-	title = {The first {Hub}-and-{Spoke} energy island – {Northseawindpowerhub}},
-	url = {https://northseawindpowerhub.eu/the-first-hub-and-spoke-energy-island/},
-	language = {en-US},
-	urldate = {2020-10-10}
+@misc{noauthor_worlds_2020,
+	title = {World’s {Most} {Powerful} {Offshore} {Wind} {Turbine}: {Haliade}-{X} 12 {MW} {\textbar} {GE} {Renewable} {Energy}},
+	url = {https://www.ge.com/renewableenergy/wind-energy/offshore-wind/haliade-x-offshore-turbine},
+	urldate = {2020-09-23},
+	year = {2020}
 }
 
 @misc{erlich_description_2018,
-	title = {Description, {Modelling} and {Simulation} of a {Benchmark} {System} for {Converter} {Dominated} {Grdis} ({Part} {I})},
+	title = {Description, {Modelling} and {Simulation} of a {Benchmark} {System} for {Converter} {Dominated} {Grids} ({Part} {I})},
 	url = {https://www.digsilent.de/en/faq-reader-powerfactory/do-you-have-an-example-of-a-fault-tolerant-power-system-with-98-share-of-renewables.html},
 	urldate = {2020-10-06},
 	author = {Erlich, I. and Korai, A.},
 	year = {2018}
+}
+
+@misc{noauthor_first_2020,
+	title = {The first {Hub}-and-{Spoke} energy island – {Northseawindpowerhub}},
+	url = {https://northseawindpowerhub.eu/the-first-hub-and-spoke-energy-island/},
+	language = {en-US},
+	urldate = {2020-10-10},
+	year = {2020}
+}
+
+@misc{noauthor_vision_2020,
+	title = {Vision – {Northseawindpowerhub}},
+	url = {https://northseawindpowerhub.eu/vision/},
+	urldate = {2020-09-02},
+	year = {2020}
 }
 
 @misc{noauthor_mmc_nodate,
@@ -21,12 +36,6 @@
 	language = {en-US},
 	urldate = {2020-09-26},
 	journal = {RTDS Technologies}
-}
-
-@misc{noauthor_worlds_nodate,
-	title = {World’s {Most} {Powerful} {Offshore} {Wind} {Turbine}: {Haliade}-{X} 12 {MW} {\textbar} {GE} {Renewable} {Energy}},
-	url = {https://www.ge.com/renewableenergy/wind-energy/offshore-wind/haliade-x-offshore-turbine},
-	urldate = {2020-09-23}
 }
 
 @book{conseil_international_des_grands_reseaux_electriques_hvdc_2015,
@@ -110,12 +119,6 @@ In the end, the issue of the operational bottlenecks (overloading of electrical 
 }
 
 @misc{noauthor_vision_nodate,
-	title = {Vision – {Northseawindpowerhub}},
-	url = {https://northseawindpowerhub.eu/vision/},
-	urldate = {2020-09-02}
-}
-
-@misc{noauthor_vision_nodate-1,
 	title = {Vision – {Northseawindpowerhub}},
 	url = {https://northseawindpowerhub.eu/vision/},
 	language = {en-US},
