--- a/report.bib
+++ b/report.bib
@@ -1,5 +1,12 @@
 @misc{dnv_gl, title={66 kV systems for offshore wind farms}, url={https://www.dnvgl.com/publications/66-kv-systems-for-offshore-wind-farms-95138}, journal={DNV GL}}
 
+@misc{rtds_tech_hardware, 
+title = {{Simulator Hardware}},
+author = {{RTDS Technologies}}, 
+url = {https://knowledge.rtds.com/hc/en-us/articles/360037038514-Hardware-in-the-loop-Testing-for-Microgrids},
+year = {2020}
+}
+
 @misc{powerfactory_tech, 
 title = {User Manual, 2019},
 author = {PowerFactory}, 
@@ -8,15 +15,39 @@ url = {http://79.101.33.142/DIgSILENT%20PowerFactory%202019%20User%20Manual/User
 
 @misc{rtds_tech, 
 title = {{RSCAD Modules}}, 
-author = {Technologies, R T D S}, 
+author = {{{RTDS Technologies}}}, 
 url = {https://knowledge.rtds.com/hc/en-us/articles/360037537653},
 year = {2020}
 }
 
-@misc{rtds_tech_hardware, 
-title = {Simulator Hardware},
-author = { Technologies, R T D S}, 
-url = {https://knowledge.rtds.com/hc/en-us/articles/360037038514-Hardware-in-the-loop-Testing-for-Microgrids},
+@misc{noauthor_novacor_nodate_1, 
+title = {{Novacor}}, 
+author = {{{RTDS Technologies}}}, 
+url = {https://knowledge.rtds.com/hc/en-us/articles/360034290474},
+year = {2020}
+}
+
+@misc{noauthor_mmc_nodate_1, 
+title = {{MMC Modeling}}, 
+author = {{{RTDS Technologies}}}, 
+url = {http://knowledge.rtds.com/hc/en-us/articles/360039628773},
+year = {2020}
+}
+
+@article{alassi2019hvdc,
+  title={{HVDC Transmission: Technology Review, Market Trends and Future Outlook}},
+  author={Alassi, Abdulrahman and Ba{\~n}ales, Santiago and Ellabban, Omar and Adam, Grain and MacIver, Callum},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={112},
+  pages={530--554},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@misc{noauthor_pb5_nodate_1, 
+title = {{PB5 Card}}, 
+author = {{{RTDS Technologies}}}, 
+url = {http://knowledge.rtds.com/hc/en-us/articles/360034285894},
 year = {2020}
 }
 
@@ -29,7 +60,7 @@ year = {2020}
 }
 
 @inproceedings{yu2016use,
-  title={Use of an inertia-less virtual synchronous machine within future power networks with high penetrations of converters},
+  title={{Use of an inertia-less Virtual Synchronous Machine within future power networks with high penetrations of converters}},
   author={Yu, Mengran and Roscoe, Andrew J and Booth, Campbell D and Dysko, Adam and Ierna, Richard and Zhu, Jiebei and Urdal, Helge},
   booktitle={2016 Power Systems Computation Conference (PSCC)},
   pages={1--7},
@@ -90,7 +121,7 @@ The simulator-Hardware,
 }
 
 @inproceedings{weise2019comparison,
-  title={Comparison of Selected Grid-Forming Converter Control Strategies for Use in Power Electronic Dominated Power Systems},
+  title={{Comparison of Selected Grid-Forming Converter Control Strategies for Use in Power Electronic Dominated Power Systems}},
   author={Weise, B and Korai, A and Constantin, A},
   booktitle={Proceedings of the 18th Wind Integration Workshop, Dublin, Ireland},
   pages={16--18},
@@ -98,7 +129,7 @@ The simulator-Hardware,
 }
 
 @article{duckwitz_operating_behavior,
-  title={Operational behavior of the virtual synchronous machine},
+  title={{Operational Behavior of the Virtual Synchronous Machine}},
   author={Duckwitz, Daniel and Welck, Friedrich and Gl{\"o}ckler, Christoph},
   journal={Fachtagung Netzregelung und Systemf{\"u}hrung},
   year={2017},
@@ -113,7 +144,7 @@ The simulator-Hardware,
 }
 
 @book{sharifabadi2016design,
-  title={Design, control, and application of modular multilevel converters for HVDC transmission systems},
+  title={{Design, Control, and Application of Modular Multilevel Converters for HVDC Transmission Systems}},
   author={Sharifabadi, Kamran and Harnefors, Lennart and Nee, Hans-Peter and Norrga, Staffan and Teodorescu, Remus},
   year={2016},
   publisher={John Wiley \& Sons}
@@ -126,13 +157,24 @@ The simulator-Hardware,
   school={Delft University of Technology}
 }
 
-@article{wachal2014guide,
-  title={Guide for the development of models for HVDC converters in a HVDC grid},
-  author={Wachal, Randy and Jindal, A and Dennetiere, S and Saad, H and Rui, O and Cole, S and Barnes, M and Zhang, L and Song, Z and Jardini, J and others},
-  journal={Cigr{\'e} WG B},
+@techreport{wachal2014guide,
+  type = {Technical Brochure},
+  title={{Guide for the Development of Models for HVDC Converters in a HVDC grid}},
+  language = {en},
+  institution = {CIGRE Working Group B4.57},
   volume={4},
-  pages={27--32},
+  pages={27-32},
   year={2014}
+}
+
+@techreport{cigre_B455,
+  address = {},
+  type = {Technical Brochure},
+  title = {{HVDC Connection of Offshore Wind Power Plants}},
+  language = {en},
+  institution = {CIGRE Working Group B4.55},
+  number = {619},
+  year = {2015}
 }
 
 @article{vrana2013cigre,
@@ -156,10 +198,10 @@ The simulator-Hardware,
 }
 
 @article{lescale2012parallelling,
-  title={Parallelling offshore wind farms HVDC ties on offshore side},
+  title={{Parallelling offshore wind farms HVDC ties on offshore side}},
   author={Lescale, VF and Holmberg, P and Ottersten, R and Hafner, Y},
   journal={Proceedings of CIGRE 2012},
-  year={2012}
+  year={(2012)}
 }
 
 @book{irnawan2019planning,
@@ -167,16 +209,6 @@ The simulator-Hardware,
   author={Irnawan, Roni},
   year={2019},
   publisher={Springer Nature}
-}
-
-@techreport{cigre_B455,
-  address = {},
-  type = {Technical Brochure},
-  title = {{HVDC Connection of Offshore Wind Power Plants}},
-  language = {en},
-  institution = {CIGRE Working Group B4.55},
-  number = {619},
-  year = {2015}
 }
 
 @techreport{cigre2005b4,
@@ -191,7 +223,7 @@ The simulator-Hardware,
 
 
 @phdthesis{saad2015modelisation,
-  title={Mod{\'e}lisation et simulation d'une liaison HVDc de type VSC-MMC},
+  title={{MOD{\'E}LISATION ET SIMULATION D'UNE LIAISON HVDC DE TYPE VSC-MMC}},
   author={Saad, Hani Aziz},
   year={2015},
   school={{\'E}cole Polytechnique de Montr{\'e}al}
@@ -205,7 +237,7 @@ The simulator-Hardware,
 }
 
 @article{peralta2012detailed,
-  title={Detailed and averaged models for a 401-level MMC--HVDC system},
+  title={{Detailed and Averaged Models for a 401-level MMC-HVDC system}},
   author={Peralta, Jaime and Saad, Hani and Denneti{\`e}re, S{\'e}bastien and Mahseredjian, Jean and Nguefeu, Samuel},
   journal={IEEE Transactions on Power Delivery},
   volume={27},
@@ -216,7 +248,7 @@ The simulator-Hardware,
 }
 
 @article{markovic2018lqr,
-  title={{LQR-based adaptive virtual synchronous machine for power systems with high inverter penetration}},
+  title={{LQR-Based Adaptive Virtual Synchronous Machine for Power Systems with High Inverter Penetration}},
   author={Markovic, Uros and Chu, Zhongda and Aristidou, Petros and Hug, Gabriela},
   journal={IEEE Transactions on Sustainable Energy},
   volume={10},
